2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	New feature: @(deffilter)

	Bugfix in @(throw) when non-symbol is thrown: exception message
	referred to the symbol throw rather than the erroneous object.

	* filter.c (build_filter_from_list, register_filter): New functions.

	* filter.h (register_filter): New function declared.

	* lib.c (deffilter_s): New variable defined.
	(chain): Function changed from single list argument to variable
	argument list to reduce the complexity of use.
	(do_and, and): New functions.
	(obj_init): deffilter_s initializatio added.

	* lib.h (deffilter_s, and): New declarations.
	(chain): Declaration updated to new function signature.
	(eq): Changed from macro to inline function.

	* match.c (do_output_line): Simplified expression involving chain.
	(do_output): Likewise.
	(match_files): Bugfix in error handling of throw.
	Implementation of deffilter.

	* txr.1: Documented deffilter.

2011-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Trie compression. Hash table iteration.
	Bugfix in typeof.

	* filter.c (trie_compress): New function.
	(trie_value_at, trie_lookup_feed_char, filter_string): Handle cons cell
	nodes in trie.
	(build_filter): Call trie_compress.

	* gc.c (cobj_destroy_op): Function renamed to cobj_destroy_stub_op
	since it doesn't do anything.
	(cobj_destroy_free_op): New function.
	* hash.c (struct hash_iter): New type.
	(hash_destroy): Function removed.
	(hash_ops): Reference to hash_destroy replaced with
	cobj_destroy_free_op.
	(hash_count, hash_iter_mark, hash_begin, hash_next): New functions.
	(hash_iter_ops): New static structure.
	* hash.h (hash_count, hash_begin, hash_next): New functions declared.
	* lib.c (hash_iter_s): New symbol variable.
	(typeof): Bugfix: TAG_LIT type tag not handled.
	(vecref): New function.
	(obj_init): Initialize hash_iter_s.
	* lib.h (cobj_destroy_op): Declaration renamed.
	(cobj_destroy_free_op, vecref): New functions declared.
	(hash_iter_s): New variable declared.